<resources>
    <string name="app_name">Phone Speak</string>
    <string name="btnListPublicChannels">List Public Channels</string>
    <string name="btnListChannels">List Channels</string>
    <string name="channel_label_name">Name:</string>
    <string name="channel_label_id">ID:</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="real_time">Real Time</string>
    <string name="channel_label_description">Description:</string>
    <string name="channel_label_metadata">Metadata:</string>
    <string name="channel_label_latitude">Latitude:</string>
    <string name="channel_label_longitude">Longitude:</string>
    <string name="channel_label_elevantion">Elevation:</string>
    <string name="channel_label_last_entry_id">Last Entry Id:</string>
    <string name="channel_label_ranking">Ranking:</string>
    <string name="channel_label_created_at">Created at:</string>
    <string name="delete_fav_channel_title">Remove Favorite Channel</string>
    <string name="delete_fav_channel_confirm">Are you sure you want to remove this favorite?</string>
    <string name="errorVerify">Error! could not verify any of the user data.</string>
    <string name="user">"User "</string>
    <string name="lacksAPIKeyVerified">" does not have that API Key"</string>
    <string name="hasAPIKeyVerified">" is verified with API Key"</string>
    <string name="allEmptyFields">You must write at least on one of the input fields</string>
...
    <string name="insertDataBeforeVerifying">You must first insert data before verifying</string>
    <string name="verifyAPIKeyWithoutUsername">We can\'t verify the API Key without the username</string>
    <string name="usernameOnlyVerified">Username has been verified</string>
    <string name="defineUsernameTitle">Username not set</string>
    <string name="defineUsernameConfirmation">You need to define at least your username first</string>
    <string name="list_public_label">Public Channels</string>
    <string name="list_fav_label">Favorite Channels</string>
    <string name="list_own_label">Own Channels</string>
    <string name="search_id">ID</string>
    <string name="search_name">Name</string>
    <string name="search_description">Description</string>
    <string name="search_tags">Tags</string>
    <string name="NoNetwork">No Network! Please try again!</string>
    <string name="NoChannelsFound">There are no  channels with that information</string>
    <string name="data">Data</string>
    <string name="preference_file_key">pt.ipleiria.estg.dei.phonespeak.user_data_file</string>
    <string name="publicChannels">Public Channels</string>
    <string name="favoriteChannels">Favorite Channels</string>
    <string name="ownChannels">Own Channels</string>
    <string name="account_title">Account</string>
    <string name="username_hint">Username</string>
    <string name="api_key_hint">API Key</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="verify_button">Verify</string>
    <string name="sensor_name_text">Sensor Name</string>
    <string name="value_text">Value</string>
    <string name="not_available">N/A</string>
    <string name="empty_text" />
    <string name="not_have_favorite_channels">You don\'t have favorite channels</string>
    <string name="dont_have_own_channels">You don\'t have own channels</string>
    <string name="not_have_channels_to_show">You have no channels to show.</string>
    <string name="sensors_with_values">Sensors With Values</string>
    <string name="unreliable_sensors">Unreliable Sensors</string>
    <string name="sensors_without_values">Sensors Without Values</string>
    <string name="verify_account_user_and_api_not_match">Username and API Key does not match, please verify your account.</string>
    <string name="dont_have_favorite_channels">You don\'t have favorite channels</string>
    <string name="date_hint">For date: YYYY-MM-DD</string>
    <string name="see_private_channels">If you want to see your private channels, please update your API Key.</string>
    <string name="string_add_text">Add</string>
    <string name="string_send_text">Send</string>
    <string name="choose_channel">Choose Channel</string>
...
