...
        android:id="@+id/actionAutoSend"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="50"
        android:title="Auto Send"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionAccount"
        android:icon="@drawable/ic_action_account"
        android:orderInCategory="100"
        android:title="@string/account"
        app:showAsAction="always" />
</menu>
