...
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/channel_label_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLblID"
                android:layout_weight="0"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...


    <ImageButton
        android:src="@drawable/ic_action_not_fav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/btnFav"
        android:background="@null"
        android:layout_weight="10"
        android:onClick="onClickBtnFav" />

</LinearLayout>
